# nixie

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.bat  build.sh  instructions.json
.github/workflows/: build-and-test.yml  coverage.yml
examples/: build_examples.bat  build_examples.sh  fullsyntax.nxe  header.nxi  test.nxe  test.o65
nixie-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
nixie-extension/syntaxes/: nixie.tmLanguage.json
src/: ast.hpp  codegen.cpp  codegen.h  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  o65.hpp  parser.cpp  parser.hpp
src/compiler/: ast.hpp  ast_printer.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  opcodes.h  parser.cpp  parser.hpp
src/include/: linker.hpp  o65.hpp
src/linker/: linker.cpp  main.cpp
tests/: README_TESTING.md  codegen_integration_tests.cpp  codegen_o65_tests.cpp  codegen_segments_tests.cpp  codegen_tests.cpp  codegen_zeropage_tests.cpp  emu_test_helpers.hpp  lexer_tests.cpp  linker_tests.cpp  o65_builder.hpp  parser_tests.cpp  runtime_tests.cpp  test_helpers.hpp
tools/: run_py65.py
